added authorised balancers file